--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
         android:label="flutter_application_2"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+         <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDp06XKxXrGJOvbPHXnpMumiopD8mLJ0kM"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
