--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
          <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyDp06XKxXrGJOvbPHXnpMumiopD8mLJ0kM"/>
+               android:value=""/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
